--- a/_Index.html
+++ b/_Index.html
@@ -229,7 +229,7 @@ dashArray: '3',
     }).setView([0, 0], 3);
 
 
-  var newMarker = new L.marker([0, 0], {draggable:'true', icon: redIcon}).addTo(map);
+  //var newMarker = new L.marker([0, 0], {draggable:'true', icon: redIcon}).addTo(map);
    newMarker.on('click', function(e) {
       
       alert(e.latlng);
