--- a/_Index.html
+++ b/_Index.html
@@ -45,8 +45,21 @@
       
       <div id="snow-container"></div>
 
-</form>
 </div>
+</div>
+ 
+<div id="toolbar3">
+    <div id="tourstops3">
+     <p>¿Me ayudas un poquitín?
+     <p/>
+       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="MHBVC6GDG88LU">
+<input type="image" src="https://www.paypalobjects.com/es_ES/ES/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal, la forma rápida y segura de pagar en Internet.">
+<img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
+</form>
+
+    </div>
 </div>
 
 
